[gd_scene load_steps=9 format=3 uid="uid://dvhdtfstqa8ui"]

[ext_resource type="TileSet" uid="uid://b37dm7eekdlc1" path="res://Tileset.tres" id="1_4mbau"]
[ext_resource type="Texture2D" uid="uid://c00wo5jli7862" path="res://assets/background_glacial_mountains_lightened.png" id="2_cnr6n"]
[ext_resource type="Texture2D" uid="uid://0k2x5fbfp47l" path="res://assets/untitled.png" id="2_lkuft"]
[ext_resource type="PackedScene" uid="uid://c231qntuqyo3i" path="res://scenes/return_portal.tscn" id="2_ojbi5"]
[ext_resource type="PackedScene" uid="uid://cmxe1eeb7vcuu" path="res://scenes/main_character.tscn" id="4_8hydm"]
[ext_resource type="Script" path="res://scenes/main_character_room_2.gd" id="4_q10uc"]
[ext_resource type="AudioStream" uid="uid://qsyxbbho45wr" path="res://assets/audio/Updraft (Air).wav" id="6_44ire"]
[ext_resource type="AudioStream" uid="uid://c021a7f5megc1" path="res://assets/audio/(Sound) Dash.wav" id="7_4ml84"]

[node name="Room 2" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-204, -53)
scale = Vector2(2, 3.388)
texture = ExtResource("2_cnr6n")

[node name="untitled" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-66, -131)
texture = ExtResource("2_lkuft")

[node name="Return Portal" parent="." instance=ExtResource("2_ojbi5")]
position = Vector2(-1029, -190)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_4mbau")
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(-131089, 2, 0, -65553, 262146, 2, -17, 262146, 0, 65519, 2, 2, -131088, 262145, 0, -65552, 262145, 1, -16, 262145, 1, 65520, 262145, 2, -131087, 262145, 0, -65551, 262145, 1, -15, 262145, 1, 65521, 262145, 2, -131086, 262145, 0, -65550, 262145, 1, -14, 262145, 1, 65522, 262145, 2, -131085, 131074, 0, -65549, 131074, 1, -13, 131074, 1, 65523, 131074, 2, -65546, 2, 0, -10, 2, 1, 65526, 2, 2, -65545, 65538, 0, -9, 65538, 1, 65527, 65538, 2, -65544, 131074, 0, -8, 131074, 1, 65528, 131074, 2, -65541, 2, 0, -5, 2, 2, -65540, 131074, 0, -4, 131074, 2, -65538, 2, 0, -2, 2, 2, -65537, 131074, 0, -1, 131074, 2, 327660, 262146, 0, 327661, 262145, 0, 327662, 262145, 0, 327663, 262145, 0, 327664, 262145, 0, 327665, 262145, 0, 327666, 262145, 0, 327667, 262145, 0, 327668, 262145, 0, 327669, 262145, 0, 327670, 262145, 0, 327671, 262145, 0, 327672, 262145, 0, 327673, 262145, 0, 327674, 262145, 0, 327675, 262145, 0, 327676, 262145, 0, 327677, 262145, 0, 327678, 262145, 0, 327679, 262145, 0, 262144, 262145, 0, 262145, 262145, 0, 262146, 262145, 0, 262147, 262145, 0, 262148, 262145, 0, 262149, 262145, 0, 262150, 262145, 0, 262151, 262145, 0, 262152, 262145, 0, 262153, 262145, 0, 262154, 262145, 0, 262155, 262145, 0, 262156, 262145, 0, 262157, 262145, 0, 262158, 262145, 0, 262159, 262145, 0, 262160, 262145, 0, 262161, 262145, 0, 262162, 262145, 0, 262163, 262145, 0, 262164, 262145, 0, 262165, 262145, 0, 262123, 262146, 0, 262124, 131074, 0, -18, 196610, 0, 65518, 131074, 2, 65517, 65538, 2, -19, 65538, 0, -65554, 2, 0, 196586, 65538, 0, 65515, 65538, 0, 131051, 65538, 2, -20, 2, 0, 65516, 196610, 0, 131052, 131074, 2)

[node name="Character Room 2" parent="." instance=ExtResource("4_8hydm")]
texture_filter = 1
position = Vector2(-1027, -190)
script = ExtResource("4_q10uc")

[node name="dash_timer" type="Timer" parent="Character Room 2"]
wait_time = 0.2

[node name="dash_buffer" type="Timer" parent="Character Room 2"]

[node name="Updraft (Air)" type="AudioStreamPlayer2D" parent="Character Room 2"]
stream = ExtResource("6_44ire")
autoplay = true

[node name="Dash" type="AudioStreamPlayer2D" parent="Character Room 2"]
stream = ExtResource("7_4ml84")

[connection signal="timeout" from="Character Room 2/dash_timer" to="Character Room 2" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Character Room 2/dash_buffer" to="Character Room 2" method="_on_dash_buffer_timeout"]
